# redressbench

./: ARTIFACT_CHECKLIST.md  MANIFEST.md  README.md  README_v0_4_stress.md  build_scenarios.py  pyproject.toml  requirements.txt
analysis/: README.md  scripted_demo_summary.csv
analysis/gpt-4.1_v04_stress/: domain_condition_summary.csv  run_level_audit.csv
analysis/ollama_llama31_8b_v03_full/: run_level_audit.csv
analysis/ollama_llama31_8b_v03_pilot/: condition_summary.csv  domain_condition_summary.csv  run_level_audit.csv
analysis/scripted_v04_stress_smoke/: condition_summary.csv  domain_condition_summary.csv  run_level_audit.csv
casefiles/: README.md  scripted_demo_annotation_template.csv
data/: scenarios_v0_2.csv  scenarios_v0_2.jsonl  scenarios_v0_4_combined.jsonl  scenarios_v0_4_stress.csv  scenarios_v0_4_stress.jsonl
docs/: annotation_protocol.md  annotator_quickstart.md  anonymization_checklist.md  artifact_appendix_plan.md  irb_ethics_note.md  repository_manifest.md  reproducibility.md  results_status.md  runtime_gated_redress.md
outputs/: README.md  gpt-4.1_v04_stress_runs.jsonl  scripted_demo_runs.jsonl  scripted_v04_stress_smoke.jsonl
prompts/: baseline.txt  guardrailed.txt  output_contract.json  reviewer_prompt.txt  trace.txt  trace_escalation.txt
prompts/contracts/: baseline_contract.json  (+2 more)
rubrics/: redressability_rubric.md
schemas/: redress_trace.schema.json  scenario.schema.json
scripts/: run_gpt41_v04_stress.sh  run_ollama_v03_full.sh  run_openai_pilot.sh  run_scripted_demo.sh  run_smoke_test.sh
tests/: test_smoke.py
(+49 files in other folders)
