[project]
name = "agent-redressbench"
version = "0.9.0"
description = "Synthetic benchmark scaffold for evaluating redressability in tool-using AI agents."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0"
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
test = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
